demos/deploy/database/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: intel-rh-database
  labels:
    app.kubernetes.io/name: inference-database
    app.kubernetes.io/part-of: intel-rh-ai-platform
