demos/deploy/database/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: intel-rh-database
  labels:
    app.kubernetes.io/name: inference-database
    app.kubernetes.io/part-of: intel-rh-ai-platform
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: inference-database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: inference-database
    spec:
      containers:
      - name: postgres
        image: registry.redhat.io/rhel9/postgresql-15:latest
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/pgsql/data
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - gateway
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - gateway
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
